--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".view.activity.MainActivity"/>
+
         <activity android:name=".view.activity.LoginActivity"/>
 
     </application>
