--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,9 +103,12 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
 
     /*转义工具*/
-    implementation 'org.apache.commons:commons-text:1.8'
+    //implementation 'org.apache.commons:commons-text:1.8'
 
     /*去掉/工具*/
    // implementation 'org.apache.commons:commons-lang3:3.8.1'
+
+    //字体
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
 }
